# routes/index.js
@@ -10,7 +10,7 @@ axios.defaults.headers.common['Authorization'] = process.env.BEARER_TOKEN;
 axios.defaults.baseURL = process.env.BASE_URL;
 axios.defaults.headers.post['Content-Type'] = 'application/json';
 
-const accountId = process.env.ACCOUNT;
+const accountIdGuid = process.env.ACCOUNT;
 
 /* GET home page. */
 router.get('/', function(req, res, next) {
@@ -31,15 +31,22 @@ const docusignGet = (req, res, next, endpoint) => {
   });
 }
 
+/* GET - Get account details */
+router.get('/accounts/:accountIdGuid', function (req, res, next) {
+  const account_id_guid = req.params.accountIdGuid === "undefined" ? accountIdGuid : req.params.accountIdGuid;
+  const endpoint = `accounts/${account_id_guid}`;
+  docusignGet(req, res, next, endpoint);
+});
+
 /* GET - Get a list of account's Envelopes */
 router.get('/templates', function (req, res, next) {
-  const endpoint = `accounts/${accountId}/templates`;
+  const endpoint = `accounts/${accountIdGuid}/templates`;
   docusignGet(req, res, next, endpoint);
 });
 
 /* POST - Create a new Envelope */
 router.post('/envelopes',  function (req, res, next) {
-  axios.post(`accounts/${accountId}/envelopes`, req.body)
+  axios.post(`accounts/${accountIdGuid}/envelopes`, req.body)
   .then(response => {
     console.log(response.data);
     res.status(response.status).send({
@@ -56,19 +63,19 @@ router.post('/envelopes',  function (req, res, next) {
 
 /* GET - Get a list of Envelopes' documents */
 router.get('/envelopes/:envelopeId/documents', function(req, res, next) {
-  const endpoint = `accounts/${accountId}/envelopes/${req.params.envelopeId}/documents`;
+  const endpoint = `accounts/${accountIdGuid}/envelopes/${req.params.envelopeId}/documents`;
   docusignGet(req, res, next, endpoint);
 });
 
 /* GET - Get a list of Envelopes' recipients */
 router.get('/envelopes/:envelopeId/recipients', function(req, res, next) {
-  const endpoint = `accounts/${accountId}/envelopes/${req.params.envelopeId}/recipients`;
+  const endpoint = `accounts/${accountIdGuid}/envelopes/${req.params.envelopeId}/recipients`;
   docusignGet(req, res, next, endpoint);
 });
 
 /* GET - Get a list of Envelopes' recipients */
 router.get('/envelopes/:envelopeId/recipients/:recipientId/signature', function(req, res, next) {
-  const endpoint = `accounts/${accountId}/envelopes/${req.params.envelopeId}/recipients/${req.params.recipientId}/signature`;
+  const endpoint = `accounts/${accountIdGuid}/envelopes/${req.params.envelopeId}/recipients/${req.params.recipientId}/signature`;
   docusignGet(req, res, next, endpoint);
 });
 
